#4011 - New Contribute Flow: tweaks on modal                  - spacing issue on smaller screens                  - fix map controls overlapping

--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/contribute/details.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/widget/contribute/details.less
@@ -3,10 +3,10 @@
 
 
 .popup.popup-contribute{
+  z-index: 90000;
   .content {
     //min-width: @containerRealSize*0.9;
-    width: 90%;
-    max-width: @containerRealSize + 2*@containerMarginSize;
+    width: @containerRealSize + 2*@containerMarginSize;
     height: 90%;
     padding: 0;
     .details-content{
